--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
   # Replace dep1 dep2 ... with your dependencies
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
   - source activate test-environment
-  - pip install -e ".[dev]"
+  - pip install -e ".[test]"
 
 script:
   # Your test script goes here
