Fix pre-commit windows installation issues with Black

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,5 +9,9 @@ repos:
     rev: stable
     hooks:
     - id: black
+      name: black
+      language: system
+      entry: python -m black
+      types: [python]
       args: [--line-length=88, --safe]
       python_version: python3.6
