--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+ditto/readers/synergi/mdbtools.tar.gz
+ditto/readers/synergi/mdbtools
 
 # Editor generated files #
 ##########################
@@ -142,4 +144,3 @@ venv.bak/
 
 
 # End of https://www.gitignore.io/api/python,jupyternotebook
-
