--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -21,7 +21,9 @@ jobs:
     - name: Install pypandoc
       run: python -m pip install pypandoc
     - name: Build a binary wheel and a source tarball
-      run: python setup.py sdist bdist_wheel
+      run: |
+        python -m pip install wheel
+        python setup.py sdist bdist_wheel
     - name: Publish distribution 📦 to Test PyPI
       uses: pypa/gh-action-pypi-publish@master
       with:
