--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,9 @@ name: CI
 
 on: [push, pull_request]
 
+env:
+  POETRY_VERSION: 1.4.2
+
 jobs:
   build:
     runs-on: ${{matrix.os}}
@@ -14,22 +17,30 @@ jobs:
           - windows-latest
         python-version: [ '3.7','3.8','3.9' ]
     steps:
+
     - uses: actions/checkout@v2
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+
+
+    - name: Install Poetry
+      uses: snok/install-poetry@v1.3.1
+      with:
+        version: ${{env.POETRY_VERSION}}
+        virtualenvs-create: true
+        virtualenvs-in-project: true
+
     - name: Install dependencies
-      run: |
-        python -m pip install -U pip
-        pip install ".[all,test]"
+      run: poetry install --all-extras
+
     - name: run pytests
-      run: |
-        pip install pytest pytest-ordering pytest-cov
-        pytest -vvv
+      run: poetry run pytest -vvv
+
     - name: Generate coverage report
-      run: |
-        pytest --cov=./ --cov-report=xml:unit.coverage.xml
+      run: poetry run pytest --cov=./ --cov-report=xml:unit.coverage.xml
+
     - name: Upload unit test coverage to Codecov
       uses: codecov/codecov-action@v1.0.7
       with:
