--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
           - macOS-latest
           - ubuntu-latest
           - windows-latest
-        python-version: [ '3.7','3.8','3.9' ]
+        python-version: [ '3.10' ] # '3.7','3.8','3.9',
     steps:
 
     - uses: actions/checkout@v2
