--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = ["Tarek Elgindy <tarek.elgindy@nrel.gov>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.7,<3.11"
+python = ">=3.8,<3.11"
 click = "^8.1.3"
 future = "^0.18.3"
 json-tricks = "^3.16.1"
@@ -61,6 +61,23 @@ pytest-cov = "^4.0.0"
 ditto = "ditto.cli:main"
 ditto-cli = "ditto.cli:cli"
 
+[tool.poetry.plugins."ditto.readers"]
+gridlabd = "ditto.readers.gridlabd:GridLABDReader"
+opendss = "ditto.readers.opendss:OpenDSSReader"
+cyme = "ditto.readers.cyme:CymeReader"
+demo = "ditto.readers.demo:DemoReader"
+json = "ditto.readers.json:JsonReader"
+synergi = "ditto.readers.synergi:SynergiReader"
+
+[tool.poetry.plugins."ditto.writers"]
+gridlabd = "ditto.writers.gridlabd:GridLABDWriter"
+opendss = "ditto.writers.opendss:OpenDSSWriter"
+cyme = "ditto.writers.cyme:CymeWriter"
+demo = "ditto.writers.demo:DemoWriter"
+json = "ditto.writers.json:JsonWriter"
+ephasor = "ditto.writers.ephasor:EphasorWriter"
+
+
 [tool.pytest.ini_options]
 # Ignore library warnings - they just pollute the test output
 filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning", "ignore::FutureWarning"]
@@ -69,6 +86,6 @@ filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning", "ignore::
 #addopts = '-s -m "not integration" --cov-report term-missing --cov-report html --cov=src --durations=0 --durations-min=5.0 --tb=native'
 
 # options to let debuggers work with pytest (by disabling pytest-cov coverage, see https://youtrack.jetbrains.com/issue/PY-20186)
-addopts = '-p no:faulthandler --durations=0 --durations-min=5.0 --tb=native'
+addopts = '-p no:faulthandler --tb=native'
 
 
