--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
         os:
           - ubuntu-latest
           - windows-latest
-        python-version: [ '3.7','3.8','3.9' ]
+        python-version: [ '3.7','3.9' ]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
